--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.2",
+    "@types/hammerjs": "^2.0.36",
     "cordova-res": "^0.15.2",
     "firebase": "^8.2.0",
+    "hammerjs": "^2.0.8",
+    "ionic-long-press": "^2.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
